tests/src/snapshots/parser__parse_assignment_variable.snap
---
source: tests/src/parser.rs
expression: "let x := 47"
---
Ok(
    Module {
        start: 0,
        end: 11,
        imports: [],
        body: [
            Assignment {
                start: 0,
                end: 11,
                is_constant: false,
                left: Identifier {
                    start: 4,
                    end: 5,
                    name: "x",
                    inferred_type: Unknown,
                },
                right: NumericLiteral {
                    start: 9,
                    end: 11,
                    value: Int(
                        47,
                    ),
                    raw_value: "47",
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
