tests/src/snapshots/parser__parse_empty.snap
---
source: tests/src/parser.rs
expression: ""
---
Ok(
    Module {
        start: 0,
        end: 0,
        imports: [],
        body: [],
    },
)
