tests/src/snapshots/parser__parse_err_incomplete_assignment_3.snap
---
source: tests/src/parser.rs
expression: "let x\nlet y = 3"
---
Err(
    UnexpectedToken(
        2,
    ),
)
