tests/src/snapshots/parser__parse_identifier.snap
---
source: tests/src/parser.rs
expression: hello
---
Ok(
    Module {
        start: 0,
        end: 5,
        imports: [],
        body: [
            Identifier {
                start: 0,
                end: 5,
                name: "hello",
                inferred_type: Unknown,
            },
        ],
    },
)
