tests/src/snapshots/parser__parse_import_module.snap
---
source: tests/src/parser.rs
expression: use something
---
Ok(
    Module {
        start: 0,
        end: 13,
        imports: [
            Import {
                start: 0,
                end: 13,
                alias: None,
                path: "something",
            },
        ],
        body: [],
    },
)
