tests/src/snapshots/parser__parse_non_call_multiple_lines.snap
---
source: tests/src/parser.rs
expression: "thing\n(just, a, tuple)"
---
Ok(
    Module {
        start: 0,
        end: 22,
        imports: [],
        body: [
            Identifier {
                start: 0,
                end: 5,
                name: "thing",
                inferred_type: Unknown,
            },
            Tuple {
                start: 6,
                end: 22,
                entries: [
                    Identifier {
                        start: 7,
                        end: 11,
                        name: "just",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 13,
                        end: 14,
                        name: "a",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 16,
                        end: 21,
                        name: "tuple",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
    },
)
